Template: fix layout issues with Android Stock Browser, add inline shadow for body, small margin fixes
git-svn-id: svn+ssh://svn.code.sf.net/p/commitglieder/code/trunk/fwrethen_template@73 b68487ed-25af-4cb2-96ca-644de152e200

--- a/css/template.css
+++ b/css/template.css
@@ -15,10 +15,12 @@ form {
 body {
 	font-family: Helvetica,Arial,sans-serif;
 	line-height: 1.3em;
-	margin: 0px 0px 0px 0px;
+	padding: 5px 0;
+	margin: 0;
 	font-size: 12px;
 	color: #333;
 	background: #0C3A6D;
+	box-shadow: inset 0 0 13px -3px #000;
 }
 
 a:link, a:visited {
@@ -42,10 +44,6 @@ img { border: 0 none; }
 /*****************************************/
 /*** Template specific layout elements ***/
 /*****************************************/
-#page_bg {
-	padding: 10px 0;
-	margin-bottom: 1px;
-}
 
 div.center {
   text-align: center;
@@ -251,7 +249,7 @@ nav#pillmenu a:hover {
 #leftcolumn {
 	padding: 0;
 	margin: 0;
-	width: 200px;
+	width: 195px;
 	float:left;
 }
 
@@ -273,7 +271,6 @@ table.nopad {
 	border-collapse: collapse;
 	padding: 0;
 	margin: 0;
-	margin-bottom: 15px;
 }
 
 table.nopad td.middle_pad {
@@ -555,7 +552,6 @@ table.contentpaneopen h4 {
 
 /* module control elements */
 table.userx div.moduletable {
-	margin-bottom: 0px;
 }
 
 div.moduletable, div.module {
